# rs-init

./: Cargo.toml  README.md
src/: lib.rs
